# rusadrl

./: .gitignore  Cargo.toml  README.md  licenserc.toml
bindings/ffi/: Cargo.toml  Makefile  build.rs  cbindgen.toml  main  main.c
bindings/ffi/include/: odrl.h
bindings/ffi/src/: lib.rs
bindings/ffi/tests/: jsonld.rs
bindings/ffi/tests/jsonld/: basic.jsonld
bindings/go/: go.mod  godrl  main  main.go
bindings/go/pkg/odrl/: mod.go
odrls/: odrl.jsonld
schema/: ODRL22.xsd
src/: lib.rs  main.rs
src/config/: mod.rs
src/data/: bak.jsonld  basic.jsonld  basic_logic.jsonld  jsonldcontext.json  sample.jsonld  test.jsonld
src/linkdata/: http_loader.rs  httploader.rs  jsonld.rs  mod.rs  odrl_loader.rs
src/model/: action.rs  asset.rs  conflict_strategy.rs  constraint.rs  constraint_left_operand.rs  constraint_operator.rs  constraint_right_operand.rs  data_type.rs  duty.rs  error.rs  eval.rs  metadata.rs  mod.rs  model_factory.rs  party.rs  permission.rs  policy.rs  prohibition.rs  resource_model.rs  rule.rs  stateworld.rs
src/reference/: anno.rs  mod.rs  types.rs
src/traits/: definions.rs  display.rs  mod.rs  traits.rs  validate.rs
