[package]
name = "rusodrl"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
lombok = "0.4"
sophia = { version = "0.9.0", features = ["jsonld"] }
tokio = { version = "1", features = ["full"] }
static-iref = { version = "3.0"}
iref = { version = "3.0"}
reqwest = { version = "0.12", features = ["json"] }
async-trait = { version = "0.1" }
json-ld = { version = "0.21", features = ["serde"] }
json-ld-core = { version = "0.21" }
json-ld-syntax = { version = "0.21" }
json-ld-serialization = { version = "0.21" }
linked-data = "0.1"
linked-data-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mime = { version = "0.3"}

[profile.dev]
opt-level = 0
debug = true
panic = 'abort'