# Copyright 2024 meduo <gao.brian@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rusadrl"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bindings/ffi"
]

[dependencies]
thiserror = { version = "2" }
anyhow = { version = "1.0" }
lombok = { version = "0.4"}
bon = "3.5"
sophia = { version = "0.9.0", features = ["jsonld","http_client"] }
tokio = { version = "1", features = ["full"] }
static-iref = { version = "3.0"}
iref = { version = "3.2"}
reqwest = { version = "0.12", features = ["json","gzip"] }
async-trait = { version = "0.1" }
json-ld = { version = "0.21", features = ["serde"] }
json-ld-core = { version = "0.21" }
json-ld-syntax = { version = "0.21" }
json-ld-serialization = { version = "0.21" }
linked-data = { version = "0.1", features = ["default","serde","derive"]}
linked-data-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mime = { version = "0.3"}
chrono = "0.4.39"
once_cell = "1.20.2"
rdf-types = "0.22"
xsd-types = "0.9"

[profile.release]
opt-level = 3
debug = true
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
panic = 'abort'